--- a/config-newserver/src/main/resources/application.properties
+++ b/config-newserver/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.cloud.config.server.git.uri=https://github.com/wangshanghello/-config-eur
 spring.cloud.config.server.git.searchPaths=respo
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=wangshanghello
-spring.cloud.config.server.git.password=action123
+spring.cloud.config.server.git.password=********
